@@ -1,6 +1,5 @@
 package com.backend.ecommercebackend.service.impl;
 
-import com.backend.ecommercebackend.authentication.jwt.JwtService;
 import com.backend.ecommercebackend.dto.request.ProductRequest;
 import com.backend.ecommercebackend.dto.request.RecommendProductRequest;
 import com.backend.ecommercebackend.dto.response.ProductResponse;
@@ -16,9 +15,6 @@ import com.backend.ecommercebackend.repository.product.ProductRepository;
 import com.backend.ecommercebackend.repository.user.UserRepository;
 import com.backend.ecommercebackend.service.FileStorageService;
 import com.backend.ecommercebackend.service.ProductService;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -26,6 +22,7 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -35,34 +32,14 @@ public class ProductServiceImpl implements ProductService {
     private final ProductRepository repository;
     private final FileStorageService fileStorageService;
     private final CommentRepository commentRepository;
-    private final JwtService jwtService;
-    private final UserRepository userRepository;
-    private final FavoriteRepository favoriteRepository;
-
     private final ProductRepository productRepository;
     private final Random random = new Random();
     @Override
     public Product addProduct(ProductRequest request, List<MultipartFile> imageFiles) {
         Product product = mapper.ProductDtoToEntity(request);
-        Map<String, String> specifications = stringParseJson(request.getSpecifications());
-        product.setSpecifications(specifications);
         List<String> imageUrls = new ArrayList<>();
         addImage(imageFiles, product, imageUrls);
         return repository.save(product);
-    }
-
-    private Map<String, String> stringParseJson(String requestSpecifications) {
-        Map<String, String> specifications = new HashMap<>();
-        if (requestSpecifications != null) {
-            try {
-                ObjectMapper objectMapper = new ObjectMapper();
-                specifications = objectMapper.readValue(requestSpecifications, new TypeReference<Map<String, String>>() {
-                });
-            } catch (JsonProcessingException e) {
-                throw new ApplicationException(Exceptions.INVALID_FORMAT_EXCEPTION);
-            }
-        }
-        return specifications;
     }
 
     @Override
@@ -70,8 +47,6 @@ public class ProductServiceImpl implements ProductService {
         Product product = repository.findById(id).orElseThrow(() -> new ApplicationException(Exceptions.NOT_FOUND_EXCEPTION));
         mapper.updateProductFromProductDto(request, product);
         List<String> imageUrls = new ArrayList<>();
-        Map<String, String> specifications = stringParseJson(request.getSpecifications());
-        product.setSpecifications(specifications);
         for (String imageUrl : product.getImageUrl()) {
             if (imageUrl != null) {
                 fileStorageService.deleteFile(imageUrl);
@@ -100,7 +75,7 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     public Product getProductById(Long id) {
-       return repository.findById(id).orElseThrow(() -> new ApplicationException(Exceptions.NOT_FOUND_EXCEPTION));
+        return repository.findById(id).orElseThrow(() -> new ApplicationException(Exceptions.NOT_FOUND_EXCEPTION));
     }
 
     @Override
@@ -110,35 +85,14 @@ public class ProductServiceImpl implements ProductService {
         }
         List<Product> products = repository.findByCategoryName(categoryName);
         if (products.isEmpty()) {
-            throw  new ApplicationException(Exceptions.NOT_FOUND_EXCEPTION,"No products found or wrong category name");
+            throw new ApplicationException(Exceptions.NOT_FOUND_EXCEPTION, "No products found or wrong category name");
         }
         return products;
     }
 
     @Override
-    public List<ProductResponse> getAllProduct(String token) {
-
-        if (Boolean.TRUE.equals(jwtService.isTokenExpired(token))) {
-            throw new ApplicationException(Exceptions.INVALID_TOKEN_EXCEPTION, "token expired");
-        }
-
-        String email = jwtService.extractUsername(token);
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new ApplicationException(Exceptions.USER_NOT_FOUND));
-
-        List<Product> products = repository.findAll();
-        List<Favorites> userFavorites = favoriteRepository.findByUserId(user.getId());
-
-        List<Long> favoriteProductIds = userFavorites.stream()
-                .map(Favorites::getProductId)
-                .toList();
-
-        return products.stream()
-                .map(product -> {
-                    boolean isFav = favoriteProductIds.contains(product.getId());
-                    return mapper.toProductResponse(product, isFav);
-                })
-                .toList();
+    public List<Product> getAllProduct() {
+        return repository.findAll();
     }
 
     @Override
@@ -162,6 +116,7 @@ public class ProductServiceImpl implements ProductService {
         List<Product> result = new ArrayList<>();
         List<Product> allProducts = repository.findAll();
         List<Product> filter = new ArrayList<>();
+        List<String> objectTypeSpecifications = new ArrayList<>();
         if (min != null && max != null) {
             result = allProducts.stream().filter(item -> item.getPrice() >= min && item.getPrice() < max).toList();
         } else {
@@ -175,10 +130,39 @@ public class ProductServiceImpl implements ProductService {
                 for (Map.Entry<String, String> entry : filterSpec.entrySet()) {
                     String filterValue = entry.getValue().replace("\"", "").trim();
                     String filterKey = entry.getKey();
-                    if (product.getSpecifications().containsKey(filterKey)) {
-                        String productValue = product.getSpecifications().get(filterKey);
-                        if (!Objects.equals(productValue, filterValue)) {
-                            matches = false;
+                    String nestedKey = "";
+                    String[] keyValues;
+                    if (filterKey.contains(".")) {
+                        keyValues = filterKey.split("\\.");
+                        filterKey = keyValues[0];
+                        nestedKey = keyValues[keyValues.length - 1];
+                        System.out.println(filterKey + " " + nestedKey);
+                    }
+                    objectTypeSpecifications = specificationRepository.findBySpecificationName(filterKey);
+                    System.out.println(objectTypeSpecifications);
+                    if (objectTypeSpecifications.contains("Object")) {
+                        if (product.getSpecifications().containsKey(filterKey)) {
+                            Object productObjectValue = product.getSpecifications().get(filterKey);
+                            System.out.println(productObjectValue + " " + "productObjectValue");
+                            Object productValue;
+                            if (productObjectValue instanceof Map) {
+                                Map<String, Object> productValueMap = (Map<String, Object>) productObjectValue;
+                                productValue = productValueMap.get(nestedKey);
+                                boolean filterBoolean = Boolean.parseBoolean(filterValue);
+                                System.out.println("productValue " + productValue);
+                                System.out.println("filterValue " + filterValue + " " + ((Object) filterValue).getClass().getName());
+                                if (!Objects.equals(productValue, filterBoolean)) {
+                                    matches = false;
+                                    System.out.println("matches " + matches);
+                                }
+                            }
+                        }
+                    } else {
+                        if (product.getSpecifications().containsKey(filterKey)) {
+                            Object productValue = product.getSpecifications().get(filterKey);
+                            if (!Objects.equals(productValue, filterValue)) {
+                                matches = false;
+                            }
                         }
                     }
                 }
@@ -194,16 +178,53 @@ public class ProductServiceImpl implements ProductService {
         }
         return result;
     }
+
+    @Override
+    public Map<String, Map<String, Object>> createPcFilter(Map<String, String> filter) {
+        List<Product> products = repository.findAll();
+        Map<String,Map<String,Object>>defaultParts = new HashMap<>();
+        List<String> categories = List.of("Ram", "Cpu", "Psu", "Gpu", "Ssd", "Hdd", "Case", "Motherboard");
+
+        for (Product product : products) {
+            if (categories.contains(product.getCategoryName())) {
+                defaultParts.computeIfAbsent(product.getCategoryName(), k -> new HashMap<>()).put(product.getName(), false);
+            }
+        }
+        for (Product product : products) {
+            if (categories.contains(product.getCategoryName())) {
+                boolean isCompatible = true;
+                for (Map.Entry<String, String> entry : filter.entrySet()) {
+                    String filterKey = entry.getKey();
+                    String filterValue = entry.getValue();
+                    Map<String, Object> compatibleObject = (Map<String, Object>) product.getSpecifications().get("compatible");
+                    if (compatibleObject.containsKey(filterKey)) {
+                        List<String> compatibleValues = (List<String>) compatibleObject.get(filterKey);
+                        if (!compatibleValues.contains(filterValue)) {
+                            isCompatible = false;
+                            break;
+                        }
+                    }
+                }
+                if (isCompatible) {
+                    defaultParts.get(product.getCategoryName()).put(product.getName(), true);
+                }
+            }
+        }
+
+        return defaultParts;
+    }
+
     @Override
     public List<Product> findRecommendedProduct(RecommendProductRequest request) {
         String usingPurpose = request.getUsingPurpose();
         String whereUse = request.getWhereUse();
         String look = request.getLook();
-        return productRepository.findAll().stream()
+        List<Product> matchingProducts = repository.findAll().stream()
                 .filter(product -> usingPurpose != null && usingPurpose.trim().equalsIgnoreCase(product.getUsingPurpose().trim()))
                 .filter(product -> whereUse != null && whereUse.trim().equalsIgnoreCase(product.getWhereUse().trim()))
                 .filter(product -> look != null && look.trim().equalsIgnoreCase(product.getLook().trim()))
-                .toList();
+                .collect(Collectors.toList());
+        return matchingProducts;
     }
 }
 
